manifests-prod/service-prod.yml
apiVersion: v1
kind: Service
metadata:
    name: bootcampappgit
spec:
    type: ClusterIP
    ports:
     - protocol: TCP 
       port: 80
       targetPort: 8080
    selector:
        app: bootcampappgit
